[package]
name = "raur"
version = "0.1.0"
edition = "2021"
authors = ["Jan <jan@example.com>"]
description = "A minimal AUR helper written in Rust"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "2.0"
prettytable = "0.10"
indicatif = "0.17"